// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots IconicButton set to disabled 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  padding: 4px;
  color: currentColor;
  min-width: 32px;
}

.c5 {
  margin-right: 4px;
  margin-left: 4px;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c1 {
  background: transparent;
  border: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0px;
  color: #00438f;
  cursor: default;
}

.c1 .c2 {
  border-radius: 50%;
  -webkit-transition: .2s;
  transition: .2s;
}

.c1 .c4 {
  display: block;
  font-weight: 500;
  text-align: left;
}

.c1 .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 0;
}

.c1:hover .c2 {
  background-color: #e1ebfa;
}

.c1:hover .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c1:active .c2 {
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
}

.c1:disabled {
  opacity: .5;
}

.c1:disabled:hover .c2,
.c1:disabled:active .c2 {
  background: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1:focus {
  outline: none;
}

.c1:focus .c2 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c1:focus .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-label="Cancel"
      className="c1 "
      disabled={true}
    >
      <svg
        aria-hidden={true}
        className="c2 c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="32px"
        icon="cancel"
        p="half"
        size="32px"
        title={null}
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
        />
      </svg>
      <p
        className="c4 c5"
        color="currentColor"
        disabled={false}
        fontSize="medium"
      >
        Cancel
      </p>
    </button>
    <button
      aria-label="Lock"
      className="c1 "
      disabled={true}
    >
      <svg
        aria-hidden={true}
        className="c2 c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="32px"
        icon="lock"
        p="half"
        size="32px"
        title={null}
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
        />
      </svg>
      <p
        className="c4 c5"
        color="currentColor"
        disabled={false}
        fontSize="medium"
      >
        Lock
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots IconicButton with a hidden label 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  padding: 4px;
  color: currentColor;
  min-width: 32px;
}

.c5 {
  white-space: nowrap;
  ont-size: 14px;
  line-height: 1.14285714;
  color: #f0f2f5;
  background-color: rgba(18,43,71,0.85);
  border-radius: 4px;
  margin-top: 4px;
  padding: 4px 8px;
  pointer-events: none;
}

.c1 {
  background: transparent;
  border: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0px;
  color: #00438f;
  cursor: pointer;
  margin-left: 48px;
}

.c1 .c2 {
  border-radius: 50%;
  -webkit-transition: .2s;
  transition: .2s;
}

.c1 .Text-sc-1wu7vpu-0 {
  display: block;
  font-weight: 500;
  text-align: left;
}

.c1 .c4 {
  opacity: 0;
}

.c1:hover .c2 {
  background-color: #e1ebfa;
}

.c1:hover .c4 {
  opacity: 1;
}

.c1:active .c2 {
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
}

.c1:disabled {
  opacity: .5;
}

.c1:disabled:hover .c2,
.c1:disabled:active .c2 {
  background: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1:focus {
  outline: none;
}

.c1:focus .c2 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c1:focus .c4 {
  opacity: 1;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-label="Hidden Label"
      className="c1 "
      disabled={false}
    >
      <svg
        aria-hidden={true}
        className="c2 c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="32px"
        icon="user"
        p="half"
        size="32px"
        title={null}
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        className="c4 c5"
        style={
          Object {
            "left": 0,
            "opacity": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
          }
        }
      >
        Hidden Label
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots IconicButton with a long label 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  padding: 4px;
  color: currentColor;
  min-width: 32px;
}

.c5 {
  margin-right: 4px;
  margin-left: 4px;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c1 {
  background: transparent;
  border: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0px;
  color: #00438f;
  cursor: pointer;
}

.c1 .c2 {
  border-radius: 50%;
  -webkit-transition: .2s;
  transition: .2s;
}

.c1 .c4 {
  display: block;
  font-weight: 500;
  text-align: left;
}

.c1 .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 0;
}

.c1:hover .c2 {
  background-color: #e1ebfa;
}

.c1:hover .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c1:active .c2 {
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
}

.c1:disabled {
  opacity: .5;
}

.c1:disabled:hover .c2,
.c1:disabled:active .c2 {
  background: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1:focus {
  outline: none;
}

.c1:focus .c2 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c1:focus .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-label="I am an Iconic Button with a really really really long label"
      className="c1 "
      disabled={false}
    >
      <svg
        aria-hidden={true}
        className="c2 c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="32px"
        icon="user"
        p="half"
        size="32px"
        title={null}
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <p
        className="c4 c5"
        color="currentColor"
        disabled={false}
        fontSize="medium"
      >
        I am an Iconic Button with a really really really long label
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots IconicButton with label 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  padding: 4px;
  color: currentColor;
  min-width: 32px;
}

.c5 {
  margin-right: 4px;
  margin-left: 4px;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c1 {
  background: transparent;
  border: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0px;
  color: #00438f;
  cursor: pointer;
}

.c1 .c2 {
  border-radius: 50%;
  -webkit-transition: .2s;
  transition: .2s;
}

.c1 .c4 {
  display: block;
  font-weight: 500;
  text-align: left;
}

.c1 .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 0;
}

.c1:hover .c2 {
  background-color: #e1ebfa;
}

.c1:hover .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c1:active .c2 {
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
}

.c1:disabled {
  opacity: .5;
}

.c1:disabled:hover .c2,
.c1:disabled:active .c2 {
  background: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1:focus {
  outline: none;
}

.c1:focus .c2 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c1:focus .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-label="Delete"
      className="c1 "
      disabled={false}
    >
      <svg
        aria-hidden={true}
        className="c2 c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="32px"
        icon="delete"
        p="half"
        size="32px"
        title={null}
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
      <p
        className="c4 c5"
        color="currentColor"
        disabled={false}
        fontSize="medium"
      >
        Delete
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots IconicButton without a label 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  padding: 4px;
  color: currentColor;
  min-width: 32px;
}

.c1 {
  background: transparent;
  border: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0px;
  color: #00438f;
  cursor: pointer;
}

.c1 .c2 {
  border-radius: 50%;
  -webkit-transition: .2s;
  transition: .2s;
}

.c1 .Text-sc-1wu7vpu-0 {
  display: block;
  font-weight: 500;
  text-align: left;
}

.c1 .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 0;
}

.c1:hover .c2 {
  background-color: #e1ebfa;
}

.c1:hover .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c1:active .c2 {
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
}

.c1:disabled {
  opacity: .5;
}

.c1:disabled:hover .c2,
.c1:disabled:active .c2 {
  background: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1:focus {
  outline: none;
}

.c1:focus .c2 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c1:focus .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-label={null}
      className="c1 "
      disabled={false}
    >
      <svg
        aria-hidden={true}
        className="c2 c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="32px"
        icon="delete"
        p="half"
        size="32px"
        title={null}
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </button>
  </div>
</div>
`;
